[package]
name = "redis-stream-client"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.9", features = ["full"] }
structopt = { version = "0.3", default-features = false }
redis = { version = "0.21", features = [
    "streams",
    "async-std-comp",
    "connection-manager",
] }
thiserror = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
mockall = "0.10"
futures = { version = "0.3.3" }
log = "0.4"
serde_json = "1.0"
async-trait = "0.1"
tokio-stream = "0.1"
futures-util = "0.3"
futures-core = "0.3.16"
async-scoped = { version = "0.7.0", features = ["use-async-std"] }

[dev-dependencies]
simple_logger = "1.11.0"