[package]
name = "redis-stream-bus"
version = "0.1.0"
edition = "2018"

[dependencies]
structopt = { version = "0.3", default-features = false }
redis = { version = "0.21", features = [
    "tokio-comp",
    "streams",
    "r2d2",
    "connection-manager",
] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

[dev-dependencies]
simple_logger = "1.11.0"
tokio = { version = "1.9", features = ["macros"] }
serde-redis = { git = "https://github.com/b00f/serde-redis", branch = "ser-map" }
