[package]
name = "bus_derive"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true


[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }


[dependencies]
syn = { version = "1.0.58", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
internals = {  path = "../internals" }


