[package]
name = "redis_stream_bus"
version = "0.2.0"
edition = "2018"

[dependencies]
tokio = { version = "1.9", features = ["full"] }
structopt = { version = "0.3", default-features = false }
redis = { version = "0.21", features = [
    "streams",
    "async-std-comp",
    "connection-manager",
] }
thiserror = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
mockall = "0.10"
log = "0.4"
serde_json = "1.0"
tokio-stream = "0.1"
async-trait = "0.1.50"
futures = "0.3.15"
futures-util = "0.3.5"
# bus_derive = {  optional = true, path = "../bus_derive" }

[dev-dependencies]
simple_logger = "1.11.0"
mockall = "0.10"


[features]
default = []

#[derive(Serialize, RedisStream)]
#[stream_name("p2p:adv:drafted")]
# derive = ["bus_derive"]