[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis_stream_bus = {  path = "../redis_stream_bus", features=["bus_derive"]}
serde = { version = "1.0", features = ["derive"] }
